# clean

./: .gitpod.yml  Cargo.toml  README.md  einer.toml
einer/: Cargo.toml
einer/src/: commands.rs  config.rs  copy_env.rs  gitpod.rs  gitpod_env.rs  init_repo.rs  lib.rs  log.rs  replace_env.rs  run_redis.rs
hammer/: Cargo.toml  README.md  package.json
hammer/src/: args.rs  errors.rs  fs_checks.rs  lib.rs  main.rs  npm_process.rs  package_json.rs  tasks.rs
minigit/: Cargo.toml
minigit/src/: main.rs
repl/: Cargo.toml  package.json
repl/src/: main.rs
replace-env/: Cargo.toml
replace-env/src/: main.rs
