[package]
name = "einer"
version = "0.2.0"
edition = "2021"
description = "Internal Utils tooling"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["cargo"] }
hammer-cli = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"

[[bin]]
name = "einer"
path = "src/bin/einer.rs"
