[package]
name = "hammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
walkdir = "2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }