[package]
name = "hammer"
version = "0.1.0"
edition = "2021"
authors = ["viktormarinho"]
description = "A no-config task runner cli with monorepo support"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
walkdir = "2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0.0"

[[bin]]
name = "hammer"
path = "src/bin/hammer.rs"