[package]
name = "hammer-cli"
version = "0.2.3"
edition = "2021"
authors = ["viktormarinho"]
description = "Hammer is a no-config cli tool for running concurrent tasks with monorepo support"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
walkdir = "2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0.0"
dotenv = "0.15.0"

[[bin]]
name = "hammer"
path = "src/bin/hammer.rs"
