[package]
name = "minigit"
version = "0.1.0"
edition = "2021"
authors = ["viktormarinho"]
description = "minigit is a cli with git utils like aliases and shortcuts"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
